attempt fix of address bar collapse

--- a/src/styles.css
+++ b/src/styles.css
@@ -126,8 +126,9 @@ h1, h2, h3, h4, h5, h6 {
 
 .mat-sidenav-container {
   position: absolute !important; 
-  top: 60px !important;
+  top: 0 !important;
   left: 0 !important;
   right: 0 !important;
   bottom: 0 !important;
+  margin-top: 60px;
 }
